postgrest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  namespace: postgrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
        - name: postgrest
          image: postgrest/postgrest:v14.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: postgrest
  namespace: postgrest
spec:
  selector:
    app: postgrest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
